--- a/Website/ScannBLE.html
+++ b/Website/ScannBLE.html
@@ -7,7 +7,7 @@
     <!-- Add Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Add your custom CSS -->
-    <link rel="stylesheet" href="scan.css">
+    <link rel="stylesheet" href="styles/scan.css">
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
 </head>
 <body>
