--- a/Website/en/index.html
+++ b/Website/en/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
+        <link rel="icon" href="../../media/logo.jpg" type="image/jpeg">
         <link rel="stylesheet" href="../../styles/index.css">
         <link rel="stylesheet" href="../../styles/widgets.css">
         <link rel="stylesheet" href="../../styles/chatbot.css">
@@ -190,7 +191,7 @@
 
   <!-- Contact Area -->
   <section class="area">
-    <h2>Contact with us</h2>
+    <h2>Contact with Us</h2>
     
     <div class="contact-container">
       <nav class="social-icons">
