--- a/Website/vi/index.html
+++ b/Website/vi/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trang Chủ</title>
+        <link rel="icon" href="../../media/logo.jpg" type="image/jpeg">
         <link rel="stylesheet" href="../../styles/index.css">
         <link rel="stylesheet" href="../../styles/widgets.css">
         <link rel="stylesheet" href="../../styles/chatbot.css">
