--- a/Website/vi/visit.html
+++ b/Website/vi/visit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thăm Quan</title>
+    <link rel="icon" href="../../media/logo.jpg" type="image/jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/collection.css">
     <link rel="stylesheet" href="../../styles/widgets.css">
